eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-bank-api-deployment
  labels:
    app: transfer-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transfer-bank-api
  template:
    metadata:
      labels:
        app: transfer-bank-api
    spec:
      containers:
      - name: transfer-bank-api
        image: 502320843173.dkr.ecr.ap-southeast-1.amazonaws.com/banktransfer:60631b614fcc808a185a45b7f86522ea6588fc20/transferbank:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
